added JS, H1, H2, P, and a button.

--- a/corgi.html
+++ b/corgi.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
+<html>
 <head>
-
+    <title>Corgi Rental</title>
 </head>
 <body>
-
+    <h1>Corgi Rental</h1>
+    <h2>Corgis for rent. By the hour or day.</h2>
+    <p>class="p1">Corgi Rental is a whole new way for people to find corgis.
+    Book them online, get reminders and even build a retinue like the Queen, so
+    that there's always something adorable on hand when the mood strikes. Think
+    Zipcar for Corgis.</p>
+<script>
+    myFunction()
+    {
+    alert("Thanks, We'll be launching soon!");
+    }
+</script>
+    <form>
+        <input placeholder="Your email" type="email"> 
+        <button onclick="myFunction()">Submit</button> 
+    </form>
 </body>
+</html>
