--- a/corgi.html
+++ b/corgi.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Corgi Rental</title>
+    <link rel="stylesheet" type="text/css" href="corgi.css">
 </head>
 <body>
     <h1>Corgi Rental</h1>
